--- a/math/sum_sum_abs_abs_mult/info.toml
+++ b/math/sum_sum_abs_abs_mult/info.toml
@@ -1,10 +1,10 @@
-title = '\(\sum \sum \left( a_i a_j \right)\)'
+title = '\(\sum \sum \left( \lvert a_i - a_j \rvert \cdot \lvert b_i - b_j \rvert \right) \)'
 timelimit = 2.0
 forum = '#'
 
 [[tests]]
     name = "example.in"
-    number = 3
+    number = 4
 [[tests]]
     name = "random.cpp"
     number = 10
@@ -15,7 +15,7 @@ forum = '#'
 
 [params]
     N_MIN = 0
-    N_MAX = 100000
-    X_MIN = -1000000000
-    X_MAX = 1000000000
+    N_MAX = 1000000
+    A_MIN = -1000000000
+    A_MAX = 1000000000
     MOD = 998244353
